// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentArea /> render component when innerBackgroundColor with default 1`] = `
<div
  className="mfui-content-area mfui-content-area_background-color_transparent"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_background-color_default"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when innerBackgroundColor with green 1`] = `
<div
  className="mfui-content-area mfui-content-area_background-color_transparent"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_background-color_green"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when innerBackgroundColor with purple 1`] = `
<div
  className="mfui-content-area mfui-content-area_background-color_transparent"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_background-color_purple"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when innerBackgroundColor with spbSky0 1`] = `
<div
  className="mfui-content-area mfui-content-area_background-color_transparent"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_background-color_spbSky0"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when innerBackgroundColor with spbSky1 1`] = `
<div
  className="mfui-content-area mfui-content-area_background-color_transparent"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_background-color_spbSky1"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when innerBackgroundColor with spbSky2 1`] = `
<div
  className="mfui-content-area mfui-content-area_background-color_transparent"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_background-color_spbSky2"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when innerBackgroundColor with transparent 1`] = `
<div
  className="mfui-content-area mfui-content-area_background-color_transparent"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_background-color_transparent"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when innerBackgroundColor with white 1`] = `
<div
  className="mfui-content-area mfui-content-area_background-color_transparent"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_background-color_white"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when outerBackgroundColor with default 1`] = `
<div
  className="mfui-content-area mfui-content-area_background-color_default"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_background-color_transparent"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when outerBackgroundColor with green 1`] = `
<div
  className="mfui-content-area mfui-content-area_background-color_green"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_background-color_transparent"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when outerBackgroundColor with purple 1`] = `
<div
  className="mfui-content-area mfui-content-area_background-color_purple"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_background-color_transparent"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when outerBackgroundColor with spbSky0 1`] = `
<div
  className="mfui-content-area mfui-content-area_background-color_spbSky0"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_background-color_transparent"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when outerBackgroundColor with spbSky1 1`] = `
<div
  className="mfui-content-area mfui-content-area_background-color_spbSky1"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_background-color_transparent"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when outerBackgroundColor with spbSky2 1`] = `
<div
  className="mfui-content-area mfui-content-area_background-color_spbSky2"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_background-color_transparent"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when outerBackgroundColor with transparent 1`] = `
<div
  className="mfui-content-area mfui-content-area_background-color_transparent"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_background-color_transparent"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when outerBackgroundColor with white 1`] = `
<div
  className="mfui-content-area mfui-content-area_background-color_white"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_background-color_transparent"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> renders correctly with custom props 1`] = `
<div
  className="mfui-content-area mfui-content-area_background-color_white className rootClass"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_disable-indents_all mfui-content-area__inner_background-color_white innerClass"
  >
    <span>
      child
    </span>
  </div>
</div>
`;

exports[`<ContentArea /> renders correctly with default props 1`] = `
<div
  className="mfui-content-area mfui-content-area_background-color_transparent"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_background-color_transparent"
  >
    <span>
      child
    </span>
  </div>
</div>
`;
